# livekit-wakeword

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
configs/: figure.yaml  hey_livekit.yaml  nee_livekit_nanovllm.yaml  prod.yaml  prod_voxcpm.yaml  prod_voxcpm_nanovllm.yaml  test.yaml  test_voxcpm.yaml  test_voxcpm_nanovllm.yaml
docs/: augmentation.md  data-generation.md  evaluation.md  export-and-inference.md  feature-extraction.md  overview.md  training.md
examples/: inference.py  listener.py
examples/resources/: hey_livekit.onnx  nihao_livekit.onnx
skypilot/: train.yaml
src/livekit/wakeword/: __init__.py  cli.py  config.py  tts_constants.py  voxcpm_defaults.py
src/livekit/wakeword/data/: __init__.py  _piper_generate.py  augment.py  dataset.py  features.py  generate.py  normalize_tts.py
src/livekit/wakeword/data/piper/: __init__.py  defaults.py  synthesis.py  text.py  vits_utils.py
src/livekit/wakeword/data/piper/vits/: __init__.py  attentions.py  commons.py  models.py  modules.py  transforms.py
src/livekit/wakeword/data/piper/vits/monotonic_align/: __init__.py
src/livekit/wakeword/data/tts/: __init__.py  backends.py  piper_backend.py  voxcpm_backend.py  voxcpm_nanovllm_backend.py
src/livekit/wakeword/eval/: __init__.py  evaluate.py
src/livekit/wakeword/export/: __init__.py  onnx.py
src/livekit/wakeword/inference/: model.py
src/livekit/wakeword/models/: __init__.py  classifier.py  feature_extractor.py  pipeline.py
src/livekit/wakeword/training/: __init__.py  metrics.py  trainer.py
src/livewakeword/: __init__.py  cli.py
src/livewakeword/data/: features.py
src/livewakeword/export/: onnx.py
src/livewakeword/inference/: __init__.py  listener.py  model.py
src/livewakeword/models/: feature_extractor.py  pipeline.py
src/livewakeword/resources/: __init__.py
tests/: test_config.py  test_eval.py  test_feature_extractor.py  test_normalize_tts.py  test_voxcpm_diversification.py  test_voxcpm_nanovllm_backend.py
