[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livewakeword"
version = "0.1.0"
description = "Simplified pure-PyTorch wake word detection"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "torch>=2.2",
    "torchaudio>=2.2",
    "numpy>=1.24",
    "onnxruntime>=1.17",
    "pydantic>=2.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "rich>=13.0",
    "huggingface-hub>=0.20",
    "pyaudio>=0.2.14",
    "soundfile>=0.12",
]

[project.optional-dependencies]
train = [
    "torch-audiomentations>=0.11",
    "audiomentations>=0.36",
    "webrtcvad>=2.0.10",
    "nltk>=3.8",
    "pronouncing>=0.2",
    "scipy>=1.11",
    "setuptools>=69.0,<81",
    "librosa>=0.10",
    "scikit-learn>=1.3",
    "cmudict>=1.0",
    "piper-train>=1.0.0",
    "tqdm>=4.60",
]
export = [
    "onnx>=1.15",
    "onnxruntime>=1.17",
    "onnxscript>=0.6.2",
]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
livewakeword = "livewakeword.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/livewakeword"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

# Include bundled ONNX models for feature extraction
[tool.hatch.build.targets.wheel.force-include]
"src/livewakeword/resources/melspectrogram.onnx" = "livewakeword/resources/melspectrogram.onnx"
"src/livewakeword/resources/embedding_model.onnx" = "livewakeword/resources/embedding_model.onnx"

[tool.hatch.build.targets.sdist]
include = [
    "src/livewakeword/**/*.py",
    "src/livewakeword/resources/*.onnx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.uv]
# piper-train declares torch<2 but works fine with torch>=2.2 at runtime
# (we only need the module namespace for torch.load unpickling, not training)
override-dependencies = [
    "torch>=2.2",
    # piper-phonemize has no ARM64 macOS wheel; we use espeak-ng CLI instead
    "piper-phonemize; sys_platform != 'darwin'",
]

[tool.uv.sources]
piper-train = { git = "https://github.com/rhasspy/piper.git", subdirectory = "src/python" }

[tool.mypy]
python_version = "3.11"
strict = true
