[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livekit-wakeword"
version = "0.1.0"
description = "Simplified pure-PyTorch wake word detection"
requires-python = ">=3.11"
license = "Apache-2.0"

dependencies = [
    "torch>=2.2",
    "torchaudio>=2.2",
    "numpy>=1.24",
    "onnxruntime>=1.17",
    "pydantic>=2.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "rich>=13.0",
    "huggingface-hub>=0.20",
    "pyaudio>=0.2.14",
    "soundfile>=0.12",
]

[project.optional-dependencies]
train = [
    "torch-audiomentations>=0.11",
    "audiomentations>=0.36",
    "webrtcvad>=2.0.10",
    "nltk>=3.8",
    "pronouncing>=0.2",
    "scipy>=1.11",
    "setuptools>=69.0,<81",
    "librosa>=0.10",
    "scikit-learn>=1.3",
    "cmudict>=1.0",
    "tqdm>=4.60",
]
eval = [
    "matplotlib>=3.8",
]
export = [
    "onnx>=1.15",
    "onnxruntime>=1.17",
    "onnxscript>=0.6.2",
]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
livekit-wakeword = "livekit.wakeword.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/livekit"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

# Include bundled ONNX models for feature extraction
[tool.hatch.build.targets.wheel.force-include]
"src/livekit/wakeword/resources/melspectrogram.onnx" = "livekit/wakeword/resources/melspectrogram.onnx"
"src/livekit/wakeword/resources/embedding_model.onnx" = "livekit/wakeword/resources/embedding_model.onnx"

[tool.hatch.build.targets.sdist]
include = [
    "src/livekit/wakeword/**/*.py",
    "src/livekit/wakeword/resources/*.onnx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
